# KongGuardAl

./: .coverage  .env.docker  .env.example  .gitignore  .gitleaks.toml  .luacheckrc  .mcp.json  .pre-commit-config.yaml  .stylua.toml  ACTIVITY_LOG_IMPLEMENTATION_COMPLETE.md  AGENTS.md  AGENT_INTEGRATION_COMPLETE.md  ALL_VISUAL_FIXES_COMPLETE.md  Advanced_Rate_Limiting_DDoS_Plan.md  CHANGELOG.md  CLAUDE_FLOW_COMMANDS.md  CLERK_PRODUCTION_DEPLOYMENT.md  COMPLIANCE.md  COMPREHENSIVE_DEMO_GUIDE.md  COPYRIGHT_HEADER.txt  DASHBOARD_FIXED.md  DASHBOARD_GUIDE.md  DASHBOARD_NAVIGATION_WIREFRAME.md  DASHBOARD_TEST_RESULTS.md  DASHBOARD_TROUBLESHOOTING_SUMMARY.md  DEMO_RECORDING_SUMMARY.md  DEMO_SCRIPT.md  DYNAMIC_MODEL_DISPLAY_CONFIRMATION.md  Dockerfile  Dockerfile.ollama-service  Dockerfile.production  ENTERPRISE_ATTACK_DEMO_README.md  EXTRACTION_SUMMARY.md  FEATURE-SUMMARY.md  FINAL_VERIFICATION_REPORT.md  FLOOD_ATTACK_COMPLETE.md  FLOOD_ATTACK_SIMULATION.md  FULL_MODEL_NAMES_COMPLETE.md  Feature_Flags_Dashboards_ADRs_Plan.md  GRAFANA_BROWSER_FIX.md  (+201 more)
.claude/: github-actions-config.json  proxmox-setup.md  settings.json  settings.local.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/agents/: devops-assistant.md  docker-deployment-prep.md  policy-tuner.md  security-triage.md
.claude/commands/: claude-flow-help.md  global-proxmox-setup.md  grade-prd.md  kong-security.md  memory-store.md  neural-train.md  orchestrate.md  performance-report.md  spawn-agents.md  swarm-init.md  swarm-status.md
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/workflows/: audit.yml  ci.yml  claude-cicd.yml  claude-code-review.yml  claude.yml  deploy-proxmox-alt.yml  deploy-proxmox.yml  deploy-proxmox.yml.bak  deploy.yml  lint.yml  playwright-tests.yml  release.yml  security-review.yml  test.yml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1755663416787-uljx5sct8.txt
.pongo/: pongorc
.specify-mcp/: constitution.yaml
.swarm/: memory.db  memory.db-shm  memory.db-wal
.taskmaster/: config.json  state.json
.taskmaster/docs/: enhancement-prd.md
.taskmaster/reports/: task-complexity-report.json  task-complexity-report_assistant-local.json
.taskmaster/tasks/: task_001_assistant-local.txt  task_002_assistant-local.txt  task_003_assistant-local.txt  task_004_assistant-local.txt  task_005_assistant-local.txt  task_006_assistant-local.txt  task_007_assistant-local.txt  task_008_assistant-local.txt  task_009_assistant-local.txt  task_010_assistant-local.txt  tasks.json
ai-service/: Dockerfile  Dockerfile.websocket  app.py  app_with_websocket.py  logging_utils.py  metrics_exporter.py  requirements.txt  supabase_production.py
ai-service/agents/: __init__.py  redaction.py  run_security_triage.py  sdk_client.py
analysis-reports/: performance-1755663464731.html
archived-dashboards/: DEPRECATED.md
config/: .env.example  README.md  env_example
dashboard/: Dockerfile.production  eslint.config.mjs  next.config.ts  package-lock.json  package.json
demo-scripts/: automated-demo.sh  live-traffic-generator.sh
deployments/: README.md
docs/: CICD_QUICK_REFERENCE.md  CICD_WORKFLOW_TROUBLESHOOTING.md  CONFIGURATION_REFERENCE.md  DEPLOYMENT.md  EXAMPLES.md  GITHUB_RUNNER_SETUP.md  GRAPHQL_PROTECTION.md  GRPC_SECURITY.md  MIGRATION_GUIDE.md  NORMALIZATION_GUIDE.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PRIVACY_SECURITY.md  PRODUCT_ROADMAP.md  README.md  ROLLOUT_GUIDE.md  RUNBOOK_OPERATIONAL_GUIDE.md  TLS_FINGERPRINTING.md  TROUBLESHOOTING_CONFIGURATION.md  demo-attack-matrix.md  docker-validation-report.md  enterprise-demo-api.yaml  extraction-summary.md  feature-summary.md  launch-scripts-readme.md  mesh-enricher.md  ollama-service-api.yaml  playwright-tests-summary.md  schema-phase2-summary.md  unified-dashboard-readme.md  validation-checklist.md  validation-plan.md  validation-report-20250820-200756.md  validation-report-20250820-201148.md  visualization-recommendation.md  zapvend-kong-integration.md
fastapi-generated/: Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
grafana-local/: docker-compose.yml  prometheus.yml
kong-guard-ai/: ADVANCED_REMEDIATION_GUIDE.md  AI_GATEWAY_INTEGRATION_README.md  ARCHITECTURE.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_SAFETY.md  DRY_RUN_ENFORCEMENT.md  INCIDENT_MANAGEMENT_README.md  IP_BLACKLIST_GUIDE.md  LOG_FORMAT_DESIGN.md  PATH_FILTER_README.md  RATE_LIMITING_ANALYTICS_GUIDE.md  README.md  STRUCTURED_LOGGING.md  advanced-remediation-config.json  config-examples.json  kong-guard-ai.conf.template  kong-plugin-kong-guard-ai-0.1.0-1.rockspec  path-filter-config-example.json  test_structured_logging.lua
kong-guard-ai-demo-kit/: demo_visual_effects.js
kong-local-testing/: README.md  dashboard.html  docker-compose.yml
kong-plugin/: AI_MODULE_EXTRACTION.md  Dockerfile  kong-guard-ai-1.0.0-1.rockspec
memory/: memory-store.json
ml_models/: __init__.py  anomaly_detector.py  attack_classifier.py  feature_extractor.py  model_manager.py
mock-attacker/: nginx.conf
nginx/: nginx.conf  visualization.conf
playwright-report/: index.html
public/: README.md
scripts/: README.md  admin_api_tests.lua  ai_client.py  audit_payloads.py  audit_utils.py  audit_writers.py  auto_audit_runner.py  backup.sh  benchmark-configuration.sh  check-runner-health.sh  ci_gates.py  clean-runner-workspace.sh  deploy-plugin.sh  deploy.sh  fix_security_issues.sh  health-check.sh  quick-start.sh  quick_security_fix.sh  runner-management.sh  sanitize_test_data.py  security_monitor.sh  setup-runner.sh  test-startup.sh  validate-admin-api-compatibility.sh  validate-all.sh  validate-counter-system.sh  validate-docker-environment.sh  validate-integration.sh  validate-konnect-compatibility.sh  validate-plugin-lifecycle.sh
spec/: kong-guard-ai_spec.lua
test-results/: results.json
testing-ui/: index.html
visualization/: ai-insights.html  fixed-dashboard.html  index.html  simple-ai-dashboard.html
(+473 files in other folders)
